WiFi Einstellungen aus Datei auslesen
- Bibliothek für .ini Dateien hinzugefügt
- Update der "config.ini"
- Einlesen der WiFi Einstellungen aus der "config.ini"

--- a/Receiver/config.ini
+++ b/Receiver/config.ini
@@ -1,3 +1,11 @@
+[WIFI]
+
+# Name des WLAN Netzes
 ssid = m2msystems
+
+# Passwort des WLAN Netzes
 pass = 123456789
+
+# Verschlüsselung des WLAN Netzes
+# WEP, WPA oder WPA2
 sec = WPA2
